@@ -91,20 +91,19 @@
     </maintainers>
     <branches>
         <branch tag="gnome-2-12" regenerate="0" />
-        <branch tag="HEAD" />
+        <branch tag="gnome-2-14" />
     </branches>
   </module>
 
 
   <module id="gnome-applets">
     <_description>Gnome Applets</_description><!-- defaults to ID -->
-    <webpage>http://gnome.org/projects/epiphany/</webpage>
     <maintainers>
 	<maintainer><name>Davyd Madeley</name>
 		    <email>davyd@madeley.id.au</email>
 		    <irc-nickname>davyd</irc-nickname>
 		    <webpage>http://www.davyd.id.au/</webpage>
-		    <hackergotchi>http://planet.gnome.org/heads/davyd.png</hackergotchi>
+		    <hackergotchi>http://planet.gnome.org/heads/riff.png</hackergotchi>
 	 </maintainer>
     </maintainers>
     <branches><!-- defaults only to HEAD -->
